# wallet-r2ps

./: .dockerignore  .env.opaque  .env.softhsm  .env_linux  .env_mac  .gitignore  .hadolint.yaml  .mise.toml  .rumdl.toml  .semgrepignore  .yamlfmt  CHANGELOG.md  Cargo.toml  Makefile  README.md  REUSE.toml  docker-compose.yaml  justfile  pom.xml  renovate.json  rust-toolchain.toml
ci/: Dockerfile  (+1 more)
hsm-common/: Cargo.toml
hsm-common/src/: jose.rs  jose_tests.rs  lib.rs  protocol.rs  types.rs
hsm-worker/: .env_linux  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  mise.toml  server-opaque-key.jwk
hsm-worker/docs/: openapi_to_markdown.py  postprocess_html.py  prepare_schema.py
hsm-worker/docs/book/: book.toml
hsm-worker/docs/book/src/: SUMMARY.md  introduction.md
hsm-worker/softhsm/: entrypoint.sh  softhsm2.conf
hsm-worker/src/: generate_openapi.rs  lib.rs  main.rs
hsm-worker/src/application/: device_state.rs  device_state_tests.rs  helpers.rs  mod.rs  protocol.rs  protocol_tests.rs
hsm-worker/src/application/config/: mod.rs  opaque_config.rs
hsm-worker/src/application/port/: mod.rs  worker_ports.rs
hsm-worker/src/application/port/incoming/: mod.rs  worker_request_use_case.rs
hsm-worker/src/application/port/outgoing/: hsm_spi_port.rs  jose_port.rs  mod.rs  pake_port.rs  session_state_spi_port.rs  session_state_spi_port_tests.rs  state_init_response_spi_port.rs  worker_response_spi_port.rs
hsm-worker/src/application/service/: mod.rs  state_init_service.rs  state_init_service_tests.rs
hsm-worker/src/application/service/operations/: authentication.rs  authentication_tests.rs  hsm.rs  hsm_tests.rs  mod.rs  session.rs
hsm-worker/src/application/service/worker_service/: context.rs  decode.rs  decode_tests.rs  error.rs  mod.rs  response.rs  response_tests.rs  test_utils.rs  tests.rs
hsm-worker/src/domain/: mod.rs
hsm-worker/src/domain/value_objects/: client_metadata.rs  client_metadata_tests.rs  error.rs  external.rs  hsm.rs  mod.rs  r2ps.rs  state_initialization.rs  typed_jwe.rs  typed_jws.rs
hsm-worker/src/infrastructure/: bootstrap.rs  mod.rs
hsm-worker/src/infrastructure/adapters/: mod.rs
hsm-worker/src/infrastructure/adapters/incoming/: mod.rs  r2ps_request_kafka_message_receiver.rs  state_init_request_kafka_receiver.rs
hsm-worker/src/infrastructure/adapters/outgoing/: hsm_wrapper.rs  jose_adapter.rs  jose_adapter_tests.rs  mod.rs  opaque_pake_adapter.rs  r2ps_response_kafka_message_sender.rs  session_state_memory_cache.rs  session_state_memory_cache_tests.rs  state_init_response_kafka_sender.rs
hsm-worker/src/infrastructure/config/: app_config.rs  jose_utils.rs  kafka.rs  key_derivation.rs  mod.rs  pem_util.rs
hsm-worker/tests/: kafka_integration_test.rs  key_derivation_test.rs  pkcs11_integration_test.rs  worker_flow_test.rs
integration-load-tests/: .gitignore  Cargo.toml  README.md
integration-load-tests/src/: cli.rs  main.rs  stats.rs
integration-load-tests/src/client/: access_mechanism.rs  mod.rs  rest_client.rs
integration-load-tests/src/commands/: generate.rs  load_test.rs  mod.rs
integration-load-tests/src/crypto/: keygen.rs  mod.rs  opaque_client.rs  pin_stretch.rs
integration-load-tests/src/model/: mod.rs  test_data.rs
integration-load-tests/src/protocol/: message_builder.rs  mod.rs  response_parser.rs  types.rs
rust-r2ps-worker/: .env-example  .env-mac  .env_linux  .gitignore  Cargo.toml  Containerfile  Makefile  README.md
rust-r2ps-worker/certs/: package-lock.json  package.json  pem2jwk.js  private-key.pem
rust-r2ps-worker/docs/: openapi_to_markdown.py  prepare_schema.py
rust-r2ps-worker/docs/book/: book.toml
rust-r2ps-worker/docs/book/src/: SUMMARY.md  introduction.md
rust-r2ps-worker/softhsm/: entrypoint.sh  softhsm2.conf
rust-r2ps-worker/src/: generate_openapi.rs  lib.rs  main.rs  setup_demo_data.rs
rust-r2ps-worker/src/application/: device_state.rs  helpers.rs  mod.rs  pem_config_util.rs  protocol.rs  protocol_tests.rs
rust-r2ps-worker/src/application/config/: opaque_config.rs
rust-r2ps-worker/src/application/port/: mod.rs  worker_ports.rs
rust-r2ps-worker/src/application/port/incoming/: mod.rs  permit_list_use_case.rs  r2ps_request_use_case.rs
rust-r2ps-worker/src/application/port/outgoing/: client_repository_spi_port.rs  device_permit_list_spi_port.rs  hsm_spi_port.rs  jose_port.rs  mod.rs  pake_port.rs  pending_auth_spi_port.rs  r2ps_response_spi_port.rs  session_key_spi_port.rs  session_state_spi_port.rs  session_state_spi_port_tests.rs  state_init_response_spi_port.rs  worker_response_spi_port.rs
rust-r2ps-worker/src/application/service/: device_metadata_service.rs  mod.rs  opaque_factory.rs  r2ps_service.rs  session_service.rs  state_init_service.rs  state_init_service_tests.rs  worker_service.rs
rust-r2ps-worker/src/application/service/operations/: authentication.rs  authentication_tests.rs  hsm.rs  hsm_tests.rs  mod.rs  session.rs
rust-r2ps-worker/src/domain/: mod.rs
rust-r2ps-worker/src/domain/value_objects/: client_metadata.rs  client_metadata_tests.rs  hsm.rs  inner_jwe.rs  mod.rs  opaque.rs  r2ps.rs  state_initialization.rs  typed_jwe.rs
rust-r2ps-worker/src/infrastructure/: bootstrap.rs  mod.rs  util.rs
rust-r2ps-worker/src/infrastructure/adapters/: mod.rs
rust-r2ps-worker/src/infrastructure/config/: app_config.rs  config.rs  jose_utils.rs  kafka.rs  mod.rs
rust-r2ps-worker/tests/: client_metadata.rs  kafka_integration_test.rs  key_derivation_test.rs  pkcs11_integration_test.rs  r2ps_service_test.rs  worker_flow_test.rs
wallet-bff/: .env_example  Cargo.toml  Containerfile  Makefile  README.md
wallet-bff/src/: lib.rs  main.rs
wallet-bff/src/application/: mod.rs
wallet-bff/src/application/port/: incoming.rs  mod.rs  outgoing.rs
wallet-bff/src/application/service/: mod.rs
wallet-bff/src/domain/: mod.rs
wallet-bff/src/infrastructure/: bootstrap.rs  mod.rs
wallet-bff/src/infrastructure/config/: mod.rs
wallet-bff/tests/: handlers.rs  http_integration.rs  kafka_valkey_integration_test.rs  replay_protection_tests.rs  response_service.rs
(+213 files in other folders)
