# SPDX-FileCopyrightText: 2026 Digg - Agency for Digital Government
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "hsm-common"
version = "0.1.2"
edition = "2024"

[features]
openapi = ["dep:utoipa"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
strum_macros = "0.27"
iso8601-duration = { version = "0.2.0", features = ["serde"] }
josekit = "0.10.3"

[dependencies.utoipa]
version = "5"
features = ["uuid"]
optional = true
