[package]
name = "wallet-bff"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wallet-bff"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.38.0", features = ["cmake-build", "curl-static", "tokio"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
config = "0.15.19"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
iso8601-duration = { version = "0.2.0", features = ["serde"] }
async-trait = "0.1"
utoipa = { version = "5", features = ["uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
rstest = "0.23"
