# SPDX-FileCopyrightText: 2026 Digg - Agency for Digital Government
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "wallet-bff"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "wallet-bff"
path = "src/main.rs"

[features]
testcontainers = []

[dependencies]
hsm-common = { path = "../hsm-common", features = ["openapi"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.38.0", features = ["cmake-build", "curl-static", "tokio"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
config = "0.15.19"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
iso8601-duration = { version = "0.2.0", features = ["serde"] }
async-trait = "0.1"
utoipa = { version = "5", features = ["uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
rstest = "0.23"
tower = { version = "0.5", features = ["util"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["kafka", "valkey"] }
base64 = "0.22"
